# supply-chain-capstone

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: 01-architecture.md  02-tech-stack.md  03-prompt-evolution-log.md  04-ml-pipeline-architecture.md  05-sqlite-database-design.md  06-mcp-server-design.md  07-vectorstore-rag-design.md  08-master-agent-flowchart.md  09-agent-predict-workflow.md  10-agent-diagnose-workflow.md  11-agent-simulate-workflow.md  12-agent-recommend-workflow.md  13-agent-email-workflow.md  14-gradio-ui-design.md  15-security-guardrails-design.md  16-caching-design.md  17-observability-logging.md  18-end-to-end-data-flow.md  19-format-agent-design.md  20-executive-flow-diagrams.md  21-eval-flow-design.md  22-data-architecture-methodology.md  23-refactoring-changes.md  Proposal-Form-Filled.docx
evals/: conftest.py  eval_config.py  judge.py  llm_judge_eval.py  pytest.ini  run_evals.py  test_eval_diagnose.py  test_eval_email.py  test_eval_human_baseline.py  test_eval_predict.py  test_eval_rag.py  test_eval_recommend.py  test_eval_simulate.py
evals/datasets/: sample_orders.csv
evals/human_baseline/: human_scores.xls  human_scores.xlsx
evals/reports/: 20260625T172156.json  20260705T142243.json  20260712T145739.json  20260712T171926.json  eval_report_20260625T172843.md  eval_report_20260705T142624.md  eval_report_20260712T150059.md  eval_report_20260712T172254.md  human_baseline_report_20260625T224549.md  human_baseline_report_20260705T143138.md  human_baseline_report_20260712T150059.md  human_baseline_report_20260712T172254.md  human_baseline_report_20260712T211450.md  judge_scores_20260712T150059.json  judge_scores_latest.json
prediction_pipeline/: README.md  prediction_server.py
prediction_pipeline/config/: __init__.py  hyperparameters.py
supply_chain_delivery_app/: README.md  delivery_agents.py  delivery_chat_app.py
tests/: conftest.py  test_feature_engineering.py  test_mcp_server.py  test_pydantic_models.py  test_rag_knowledge.py
(+61 files in other folders)
