[project]
name = "supply-chain-capstone"
version = "1.0.0"
description = "AI-Powered Supply Chain Last-Mile Delivery Optimisation — IIITB/upGrad Capstone"
authors = [{ name = "Aditi Kulkarni" }]
requires-python = ">=3.11"

dependencies = [
    # ── LLM / Agents ──────────────────────────────────────────────────────────
    "openai==1.109.1",
    "openai-agents==0.3.3",
    "mcp[cli]==1.17.0",
    # ── RAG / Vector Store ────────────────────────────────────────────────────
    "chromadb>=0.6.0",
    "langchain-text-splitters>=0.3.0",
    # ── ML / Data Science ─────────────────────────────────────────────────────
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    # ── Visualisation ─────────────────────────────────────────────────────────
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    # ── Web UI ────────────────────────────────────────────────────────────────
    "gradio==5.31.0",
    # ── Schema & Validation ───────────────────────────────────────────────────
    "pydantic>=2.9.0",
    # ── Config & Utilities ────────────────────────────────────────────────────
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "ipython>=8.0.0",
    "sentence-transformers>=5.6.0",
    "ragas==0.2.9",
    "langchain-openai==0.3.35",
    "langchain-community==0.3.31",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
eval = [
    # Evaluation stack (install separately when running evals)
    "ragas>=0.2.0",
    "sentence-transformers>=3.0.0",   # cross-encoder reranker
    "langchain-openai>=0.1.0",        # RAGAS LLM wrapper
    "pytest-json-report>=1.5.0",      # JSON report for run_evals.py
]

[tool.uv]
package = false   # script-based project, not an installable library

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
